--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "not dead"
   ],
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.7",
-    "core-js": "^3.4.2",
+    "babel-loader": "^8.2.5",
+    "browser-sync": "^2.27.10",
+    "core-js": "^3.22.8",
     "gulp": "^4.0.2",
-    "webpack": "^4.41.2",
-    "webpack-stream": "^5.2.1"
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "ts-loader": "^9.3.0",
+    "webpack": "5.73.0",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "jquery": "^3.6.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "^4.7.3"
   }
 }
